fix 1px overlap of navigation buttons

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ img {
 	top: 48px;
 	right: 0;
 	width: calc(min(9vh, 6vw));
-	height: calc(var(--viewport-height) - 48px - 32px);
+	height: calc(var(--viewport-height) - 48px - 32px - 1px);
 	font-size: calc(min(3vh, 2vw));
 	flex-direction: column;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -160,7 +160,7 @@ img {
 		flex-direction: row;
 	}
 	#year-bar {
-		bottom: calc(min(12vw, 6vh));
+		bottom: calc(min(12vw, 6vh) + 1px);
 	}
 }
 #footer div {
